--- a/app/students/students.html
+++ b/app/students/students.html
@@ -1,6 +1,18 @@
-<h2>Students</h2>
-<ul>
-	<li>Here are your students...</li>
-	<li>{{students}}</li>
-	<li>what?</li>
-</ul>
+<div class="container">
+
+<div class="row">
+
+    <h2>Students</h2>
+    <div class="list-group-item" ng-repeat="student in vm.students">
+			<div class="list-group-item-heading">
+				<h2>{{student.FirstName}} {{student.LastName}}</h2>
+			</div>
+			<dl class="dl-horizontal">
+				<h4>Favorite Color: {{student.FavoriteColor}}</h4>
+				<p>Favorite Food: {{student.FavoriteFood}}</p>
+				<p>Favorite Movie: {{student.FavoriteMovie}}</p>
+			<div>
+    </div>
+	</div>
+
+</div>
